--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,3 @@
 <main>
-	<div id='exhibition'>
-		{{>exhibition}}
-	</div>
-	<div id='production'>
-		{{>production}}
-	</div>
+	<p>重新布局</p>
 </main>
