说明：基本完成首页

--- a/public/less/layout/layout.head.less
+++ b/public/less/layout/layout.head.less
@@ -1,3 +1,9 @@
+//modify bs style
+.navbar-nav > li > a{
+	padding: 0;
+	display: inline-block;
+}
+
 .header-top {
 	height: 40px;
 	line-height: 40px;
@@ -6,14 +12,10 @@
 		height: 40px;
 		line-height: 40px;
 	}
-}
 
-.navbar-nav > li {
-	height: 40px;
-	line-height: 40px;
-	a {
-		padding: 0;
-		display: inline-block;
+	.navbar-nav > li {
+		height: 40px;
+		line-height: 40px;
 	}
 }
 
@@ -81,11 +83,11 @@ header > .navbar-default{
 #myNavbar {
 	ul > li.dropdown > a:hover + .dropdown-menu {
 		display: block;
-		transform:translate(55%,10%);
+		transform:translate(55%,-20%);
 	}
 
 	ul > li.dropdown > a + .dropdown-menu:hover {
 		display: block;
-		transform:translate(55%,10%);
+		transform:translate(55%,-20%);
 	}
 }
