--- a/public/less/layout/layout.head.mobile.less
+++ b/public/less/layout/layout.head.mobile.less
@@ -4,7 +4,7 @@
 
 header > .navbar-default{
 	background-color: white;
-	
+	margin-bottom: 0;
 	.navbar-brand {
 		width: 30%;
 		background-image: url('/img/header/logo.png');
