--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,12 @@
-<main>
-	<p>重新布局</p>
-</main>
+<link rel="stylesheet" type="text/css" href="/css/home.css">
+<script type="text/javascript" src="/js/lib/time.js"></script>
+{{! carousel}}
+{{> home.Carousel}}
+{{!tabs}}
+{{> home.tabs}}
+{{!intro}}
+{{> home.intro}}
+{{!cooper}}
+{{> home.coop}}
+{{!news}}
+{{> home.news}}
