--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -93,7 +93,7 @@
 			  </div>
 			</nav>
 		</header>
-		<main></main>
+		<main>{{{body}}}</main>
 		<footer class="row">
 			<div class="col-md-6 footer-left-container">大型设备左边</div>
 			<div class="col-md-6 col-sm-12 col-xs-12">
@@ -104,7 +104,7 @@
 					<span>|</span>
 					<a href="#">安全保障</a>
 				</div>
-				<div>浙公网安备 33010502001509号</div>
+				<div class="license"><img src="img/footer/police.png">&nbsp;<span>浙公网安备 33010502001509号</span></div>
 				<div>Copyright © 2016, All Rights Reserved 浙ICP备15035617</div>
 				<div>新浙互联网金融服务（杭州）有限公司 客服热线：13601687064 (9:00-18:00)</div>
 			</div>
