--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -52,7 +52,6 @@
 }
 body {
   width: 100%;
-  line-height: 20px;
   font-size: 14px;
 }
 @media only screen and (min-width: 1024px) {
@@ -61,6 +60,11 @@ body {
     min-width: 1200px;
     max-width: 1366px;
     margin: auto;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+  }
+  .navbar-nav > li > a {
+    padding: 0;
+    display: inline-block;
   }
   .header-top {
     height: 40px;
@@ -71,13 +75,9 @@ body {
     height: 40px;
     line-height: 40px;
   }
-  .navbar-nav > li {
+  .header-top .navbar-nav > li {
     height: 40px;
     line-height: 40px;
-  }
-  .navbar-nav > li a {
-    padding: 0;
-    display: inline-block;
   }
   .nav-mobile:hover > .dropdown-menu {
     display: block;
@@ -131,11 +131,11 @@ body {
   }
   #myNavbar ul > li.dropdown > a:hover + .dropdown-menu {
     display: block;
-    transform: translate(55%, 10%);
+    transform: translate(55%, -20%);
   }
   #myNavbar ul > li.dropdown > a + .dropdown-menu:hover {
     display: block;
-    transform: translate(55%, 10%);
+    transform: translate(55%, -20%);
   }
   footer {
     text-align: right;
@@ -150,6 +150,7 @@ body {
   }
   header > .navbar-default {
     background-color: white;
+    margin-bottom: 0;
   }
   header > .navbar-default .navbar-brand {
     width: 30%;
