--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -1,10 +1,10 @@
 @import './common.less';
 body {
 	width:100%;
-	line-height: 20px;
 	font-size: 14px;
 }
 
+//TODO:实际效果只有768～max
 //1024px~max
 @media only screen and (min-width:1024px) {
 	.wrapper {
@@ -12,6 +12,7 @@ body {
 		min-width: 1200px;
 		max-width: 1366px;
 		margin: auto;
+		box-shadow: 0 0 20px rgba(0, 0, 0, 0.25)
 	}
 
 	@import './layout/layout.head.less';
