说明：预编译样式改成sass 调整package.json

--- a/public/sass/home/_home.coop.scss
+++ b/public/sass/home/_home.coop.scss
@@ -1,14 +1,13 @@
-@gold:rgba(165, 117, 50, 1.0);
 .home-coop {
 	text-align: center;
 	padding-top: 20px;
 	.title {
-		color: @gold;
+		color: $gold;
 		font-size: 1.6em;
 	}
 
 	.detail {
-		color: @gold;
+		color: $gold;
 	}
 }
 
