--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,168 +1,85 @@
-@media (max-width: 1025px) {
-  .navbar-header {
-    float: none;
-  }
-  .navbar-left,
-  .navbar-right {
-    float: none !important;
-  }
-  .navbar-toggle {
-    display: block;
-  }
-  .navbar-collapse {
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-  }
-  .navbar-fixed-top {
-    top: 0;
-    border-width: 0 0 1px;
-  }
-  .navbar-collapse.collapse {
-    display: none!important;
-  }
-  .navbar-nav {
-    float: none!important;
-    margin-top: 7.5px;
-  }
-  .navbar-nav > li {
-    float: none;
-  }
-  .navbar-nav > li > a {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  .collapse.in {
-    display: block !important;
-  }
-}
-@media (max-width: 1025px) {
-  .container {
-    width: 100%;
-  }
-  .navbar-nav .open .dropdown-menu {
-    position: static;
-    float: none;
-    width: auto;
-    margin-top: :0;
-    background-color: transparent;
-    border: 0;
-    webkit-box-shadow: none;
-    box-shadow: none;
-  }
-}
 body {
   width: 100%;
-  font-size: 14px;
-}
-@media only screen and (min-width: 1024px) {
-  .wrapper {
-    width: 100%;
-    min-width: 1200px;
-    max-width: 1366px;
-    margin: auto;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
-  }
-  .navbar-nav > li > a {
-    padding: 0;
-    display: inline-block;
-  }
-  .header-top {
-    height: 40px;
-    line-height: 40px;
-    background-color: #f9f9f9;
-  }
+  font-size: 14px; }
+
+.wrapper {
+  width: 100%;
+  min-width: 1200px;
+  max-width: 1366px;
+  margin: auto;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25); }
+
+.navbar-nav > li > a {
+  padding: 0;
+  display: inline-block; }
+
+.header-top {
+  height: 40px;
+  line-height: 40px;
+  background-color: #f9f9f9; }
   .header-top .navbar-header {
     height: 40px;
-    line-height: 40px;
-  }
+    line-height: 40px; }
   .header-top .navbar-nav > li {
     height: 40px;
-    line-height: 40px;
-  }
-  .nav-mobile:hover > .dropdown-menu {
-    display: block;
-    transform: translate(50%, 0);
-    width: 340px;
-    padding: 5px 3px;
-  }
-  .mobile-icon {
-    vertical-align: middle;
-    font-size: 26px;
-  }
-  .nav-weibo {
-    background-color: #EE0000;
-    color: white;
-    padding: 5px;
-    border-radius: 50%;
-  }
-  .nav-weixin {
-    background-color: green;
-    color: white;
-    padding: 5px;
-    border-radius: 50%;
-  }
-  .nav-weixin:hover + .dropdown-menu {
-    display: block;
-    transform: translate(50%, 0);
-    width: 340px;
-    padding: 5px 3px;
-  }
-  .nav-segment-line {
-    padding-right: 7px;
-    padding-left: 7px;
-  }
-  header > .navbar-default {
-    background-color: white;
-    margin-bottom: 0;
-    border: none;
-  }
+    line-height: 40px; }
+
+.nav-mobile:hover > .dropdown-menu {
+  display: block;
+  transform: translate(50%, 0);
+  width: 340px;
+  padding: 5px 3px; }
+
+.mobile-icon {
+  vertical-align: middle;
+  font-size: 26px; }
+
+.nav-weibo {
+  background-color: #EE0000;
+  color: white;
+  padding: 5px;
+  border-radius: 50%; }
+
+.nav-weixin {
+  background-color: green;
+  color: white;
+  padding: 5px;
+  border-radius: 50%; }
+
+.nav-weixin:hover + .dropdown-menu {
+  display: block;
+  transform: translate(50%, 0);
+  width: 340px;
+  padding: 5px 3px; }
+
+.nav-segment-line {
+  padding-right: 7px;
+  padding-left: 7px; }
+
+header > .navbar-default {
+  background-color: white;
+  margin-bottom: 0;
+  border: none; }
   header > .navbar-default .navbar-brand {
     width: 148px;
     height: 80px;
     line-height: 80px;
-    background-image: url('/img/header/logo.png');
+    background-image: url("/img/header/logo.png");
     background-repeat: no-repeat;
-    background-position: center;
-  }
+    background-position: center; }
   header > .navbar-default .navbar-nav > li > a {
     height: 80px;
     line-height: 80px;
-    margin-left: 60px;
-  }
-  #myNavbar ul > li.dropdown > a:hover + .dropdown-menu {
-    display: block;
-    transform: translate(55%, -20%);
-  }
-  #myNavbar ul > li.dropdown > a + .dropdown-menu:hover {
-    display: block;
-    transform: translate(55%, -20%);
-  }
-  footer {
-    text-align: right;
-  }
+    margin-left: 60px; }
+
+#myNavbar ul > li.dropdown > a:hover + .dropdown-menu {
+  display: block;
+  transform: translate(55%, -20%); }
+#myNavbar ul > li.dropdown > a + .dropdown-menu:hover {
+  display: block;
+  transform: translate(55%, -20%); }
+
+footer {
+  text-align: right; }
   footer .footer-left-container {
-    text-align: left;
-  }
-}
-@media only screen and (max-width: 1024px) {
-  .header-top {
-    display: none;
-  }
-  header > .navbar-default {
-    background-color: white;
-    margin-bottom: 0;
-  }
-  header > .navbar-default .navbar-brand {
-    width: 30%;
-    background-image: url('/img/header/logo.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-  }
-  footer {
-    text-align: center;
-  }
-  .footer-left-container {
-    display: none;
-  }
-}
+    text-align: left; }
