--- a/public/sass/home/_home.news.scss
+++ b/public/sass/home/_home.news.scss
@@ -1,8 +1,8 @@
-@news-d-li-height:230px / 4;
-@date-big-height:230px / 4 * 0.7;
-@date-samll-height:230px / 4 *0.3;
-@news-content-title:230px / 4 * 0.4;
-@news-content-detail:230px / 4 * 0.6;
+$news-d-li-height:230px / 4;
+$date-big-height:230px / 4 * 0.7;
+$date-samll-height:230px / 4 *0.3;
+$news-content-title:230px / 4 * 0.4;
+$news-content-detail:230px / 4 * 0.6;
 
 .news {
 	height: 350px;
@@ -10,11 +10,11 @@
 
 	.title {
 		font-size: 1.6em;
-		color: @gold;
+		color: $gold;
 	}
 
 	.detail {
-		color: @gold;
+		color: $gold;
 	}
 
 	.news-c {
@@ -41,41 +41,41 @@
 		ul {
 			list-style-type: none;
 			li {
-				height: @news-d-li-height;
+				height: $news-d-li-height;
 				color:black;
 			}
 		}
 		.date {
 			float: left;
-			height: @news-d-li-height;
+			height: $news-d-li-height;
 			width:15%;
 			border-right: solid 1px grey;
 			.title{
 				font-size: 3.5em;
-				line-height: @date-big-height;
+				line-height: $date-big-height;
 			}
 
 			.sub-title {
 				font-size: 0.5em;
-				line-height: @date-samll-height;
+				line-height: $date-samll-height;
 			}
 		}
 
 
 		.content {
 			float: right;
-			height: @news-d-li-height;
+			height: $news-d-li-height;
 			width:85%;
 			text-align: left;
 			padding-left: 5px;
 			.title {
 				font-size: 1.2em;
 				color: black;
-				line-height: @news-content-title;
+				line-height: $news-content-title;
 			}
 			.sub-content {
 				font-size: 0.7em;
-				height: @news-content-detail;
+				height: $news-content-detail;
 				text-overflow:ellipsis;
 				overflow: hidden;
 			}
@@ -146,6 +146,3 @@
 		}
 	}
 }
-
-
-
