--- a/public/sass/home/_home.tabs.scss
+++ b/public/sass/home/_home.tabs.scss
@@ -1,5 +1,3 @@
-@tabs-bg:rgba(253,242,220,1.0);
-
 .blank-tag {
 	width: 100%;
 	height: 100%;
@@ -10,6 +8,6 @@
 }
 
 .home-tabs {
-	background-color: @tabs-bg;
+	background-color: $tabs-bg;
 	height: 469px;
 }
